--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Communication Center</title>
+    <link rel="stylesheet" href="styles.css" />
     <style>
       /* General Styles */
       body {
@@ -103,24 +104,13 @@
         flex: 1;
       }
 
-      /* Filter Styles */
-      .filter-section {
-        margin-bottom: 20px;
-        border: 1px solid #e0e0e0;
-        border-radius: 4px;
-        padding: 15px;
-      }
-
-      .filter-section h2 {
-        margin-top: 0;
-        margin-bottom: 10px;
-        font-size: 18px;
-      }
-
       .filter-list {
         list-style: none;
         padding: 0;
         margin: 0;
+        font-family: "Helvetica-Condensed";
+        font-size: 15px;
+        color: #57585a;
       }
 
       .filter-list li {
@@ -312,69 +302,70 @@
         <p>Find bulletins, updates, and other communications related to our products</p>
       </div>
 
-      <div id="search-container" class="search-container">
-        <div class="search-input-wrapper">
-          <input
-            type="text"
-            id="search-input"
-            placeholder="Search titles..."
-            aria-label="Search titles"
-          />
-          <button id="search-button" aria-label="Search">
-            <span class="icon-search" aria-hidden="true">🔍</span>
-          </button>
-        </div>
-        <div class="search-suggestions" id="search-suggestions"></div>
-      </div>
-
       <div class="main-content">
-        <aside class="sidebar" id="filters-container">
-          <!-- Filter sections will be inserted here by JS -->
-          <section class="filter-section" id="topics-section">
-            <h2>Topics</h2>
-            <ul class="filter-list" role="group" aria-label="Topics filters">
-              <li>
-                <input type="checkbox" id="diffusers" name="topics" />
-                <label for="diffusers">Diffusers</label>
-              </li>
-              <li>
-                <input type="checkbox" id="rsq" name="topics" />
-                <label for="rsq">RSQ</label>
-              </li>
-              <li>
-                <input type="checkbox" id="software" name="topics" />
-                <label for="software">Software</label>
-              </li>
-            </ul>
-          </section>
+        <aside class="sidebar">
+          <div id="search-container" class="search-container">
+            <div class="search-input-wrapper">
+              <input
+                type="text"
+                id="search-input"
+                placeholder="Search titles..."
+                aria-label="Search titles"
+              />
+              <button id="search-button" aria-label="Search">
+                <span class="icon-search" aria-hidden="true"></span>
+              </button>
+            </div>
+            <div class="search-suggestions" id="search-suggestions"></div>
+          </div>
+          <div id="filters-container">
+            <!-- Filter sections will be inserted here by JS -->
+            <section class="filter-section" id="topics-section">
+              <h2>Topics</h2>
+              <ul class="filter-list" role="group" aria-label="Topics filters">
+                <li>
+                  <input type="checkbox" id="diffusers" name="topics" />
+                  <label for="diffusers">Diffusers</label>
+                </li>
+                <li>
+                  <input type="checkbox" id="rsq" name="topics" />
+                  <label for="rsq">RSQ</label>
+                </li>
+                <li>
+                  <input type="checkbox" id="software" name="topics" />
+                  <label for="software">Software</label>
+                </li>
+              </ul>
+            </section>
 
-          <section class="filter-section" id="product-categories-section">
-            <h2>Product Categories</h2>
-            <ul class="filter-list" role="group" aria-label="Product Categories filters">
-              <li>
-                <input type="checkbox" id="indoor-air-quality" name="product-categories" />
-                <label for="indoor-air-quality">Indoor Air Quality</label>
-              </li>
-              <li>
-                <input type="checkbox" id="louvers" name="product-categories" />
-                <label for="louvers">Louvers</label>
-              </li>
-            </ul>
-          </section>
+            <section class="filter-section" id="product-categories-section">
+              <h2>Product Categories</h2>
+              <ul class="filter-list" role="group" aria-label="Product Categories filters">
+                <li>
+                  <input type="checkbox" id="indoor-air-quality" name="product-categories" />
+                  <label for="indoor-air-quality">Indoor Air Quality</label>
+                </li>
+                <li>
+                  <input type="checkbox" id="louvers" name="product-categories" />
+                  <label for="louvers">Louvers</label>
+                </li>
+              </ul>
+            </section>
 
-          <section class="filter-section" id="communication-type-section">
-            <h2>Communication Type</h2>
-            <ul class="filter-list" role="group" aria-label="Communication Type filters">
-              <li>
-                <input type="checkbox" id="bulletin" name="communication-type" />
-                <label for="bulletin">Bulletin</label>
-              </li>
-              <li>
-                <input type="checkbox" id="rep-update" name="communication-type" />
-                <label for="rep-update">Rep Update</label>
-              </li>
-            </ul>
-          </section>
+            <section class="filter-section" id="communication-type-section">
+              <h2>Communication Type</h2>
+              <ul class="filter-list" role="group" aria-label="Communication Type filters">
+                <li>
+                  <input type="checkbox" id="bulletin" name="communication-type" />
+                  <label for="bulletin">Bulletin</label>
+                </li>
+                <li>
+                  <input type="checkbox" id="rep-update" name="communication-type" />
+                  <label for="rep-update">Rep Update</label>
+                </li>
+              </ul>
+            </section>
+          </div>
         </aside>
 
         <main class="content">
