feat(view-toggle): add grid and list view toggle functionality
Introduce a view toggle feature allowing users to switch between grid and list views for the communications container. This enhances user experience by providing flexibility in how content is displayed.

--- a/index.html
+++ b/index.html
@@ -102,12 +102,9 @@
         </aside>
 
         <main class="content">
-          <div class="communications-header"></div>
-
-          <div id="communications-container">
+          <div class="products-grid" id="communications-container">
             <!-- Communication cards will be inserted here by JS -->
           </div>
-
           <div class="load-more-container">
             <button class="load-more prd-btn">LOAD MORE</button>
           </div>
