refactor(index.html, styles.css): update container classes and enhance responsive design
- Changed the main container class in index.html to include responsive width classes for better layout across devices.
- Added new CSS rules for .gh-container-xl, .gh-container-lg, and .gh-container-xs to improve responsiveness and maintainability of the design.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style></style>
   </head>
   <body>
-    <div class="container">
+    <div class="gh-container-xl gh-container-lg gh-container-xs">
       <div class="page-title-border-bottom">
         <h1 class="page-title">COMMUNICATIONS</h1>
         <div class="sort-container">
@@ -53,51 +53,6 @@
           </div>
           <div id="filters-container">
             <!-- Filter sections will be inserted here by JS -->
-            <section class="filter-section" id="topics-section">
-              <h2>Topics</h2>
-              <ul class="filter-list" role="group" aria-label="Topics filters">
-                <li>
-                  <input type="checkbox" id="diffusers" name="topics" />
-                  <label for="diffusers">Diffusers</label>
-                </li>
-                <li>
-                  <input type="checkbox" id="rsq" name="topics" />
-                  <label for="rsq">RSQ</label>
-                </li>
-                <li>
-                  <input type="checkbox" id="software" name="topics" />
-                  <label for="software">Software</label>
-                </li>
-              </ul>
-            </section>
-
-            <section class="filter-section" id="product-categories-section">
-              <h2>Product Categories</h2>
-              <ul class="filter-list" role="group" aria-label="Product Categories filters">
-                <li>
-                  <input type="checkbox" id="indoor-air-quality" name="product-categories" />
-                  <label for="indoor-air-quality">Indoor Air Quality</label>
-                </li>
-                <li>
-                  <input type="checkbox" id="louvers" name="product-categories" />
-                  <label for="louvers">Louvers</label>
-                </li>
-              </ul>
-            </section>
-
-            <section class="filter-section" id="communication-type-section">
-              <h2>Communication Type</h2>
-              <ul class="filter-list" role="group" aria-label="Communication Type filters">
-                <li>
-                  <input type="checkbox" id="bulletin" name="communication-type" />
-                  <label for="bulletin">Bulletin</label>
-                </li>
-                <li>
-                  <input type="checkbox" id="rep-update" name="communication-type" />
-                  <label for="rep-update">Rep Update</label>
-                </li>
-              </ul>
-            </section>
           </div>
         </aside>
 
