--- a/index.html
+++ b/index.html
@@ -4,6 +4,59 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Communication</title>
+    <link
+      rel="icon"
+      sizes="16x16"
+      type="image/png"
+      href="https://cms-test.greenheck.com/Content/GreenheckStyles/imgs/favicon-16.png"
+    />
+    <link
+      rel="icon"
+      sizes="32x32"
+      type="image/png"
+      href="https://cms-test.greenheck.com/Content/GreenheckStyles/imgs/favicon-32.png"
+    />
+    <link
+      rel="icon"
+      sizes="48x48"
+      type="image/png"
+      href="https://cms-test.greenheck.com/Content/GreenheckStyles/imgs/favicon-48.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="57x57"
+      href="https://cms-test.greenheck.com/Content/GreenheckStyles/imgs/favicon-57.png"
+    />
+    <link
+      rel="icon"
+      sizes="96x96"
+      href="https://cms-test.greenheck.com/Content/GreenheckStyles/imgs/favicon-96.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="120x120"
+      href="https://cms-test.greenheck.com/Content/GreenheckStyles/imgs/favicon-120.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="152x152"
+      href="https://cms-test.greenheck.com/Content/GreenheckStyles/imgs/favicon-152.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="167x167"
+      href="https://cms-test.greenheck.com/Content/GreenheckStyles/imgs/favicon-167.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="https://cms-test.greenheck.com/Content/GreenheckStyles/imgs/favicon-180.png"
+    />
+    <link
+      rel="icon"
+      sizes="192x192"
+      href="https://cms-test.greenheck.com/Content/GreenheckStyles/imgs/favicon-192.png"
+    />
     <link rel="stylesheet" href="styles.css" />
     <style></style>
   </head>
