feat(app.js, index.html, styles.css): enhance filter functionality and UI updates
- Implemented `getActiveFilters` and `removeFilter` methods in `CommunicationDataService` to manage active filters effectively.
- Added `updateSelectedFilters` method in `CommunicationApp` to dynamically display selected filters in the UI.
- Updated `index.html` to include a container for displaying active filters.
- Enhanced styles in `styles.css` for the new filter display, including styles for selected filters and their removal buttons.
- Improved user experience by ensuring filters can be removed and the UI updates accordingly.

--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
         </div>
       </div>
       <div class="results-count">
-        Results: <span id="communication-count">0</span> Communications
+        <div>Results: <span id="communication-count">0</span> Communications</div>
+        <div class="filtered-tags" id="filtered-tags"></div>
       </div>
 
       <div class="main-content">
@@ -102,9 +103,7 @@
               <div class="search-suggestions" id="search-suggestions"></div>
             </section>
           </div>
-          <div id="filters-container">
-            <!-- Filter sections will be inserted here by JS -->
-          </div>
+          <div id="filters-container"></div>
         </aside>
 
         <main class="content">
