refactor(index.html, styles.css): update results count display and add styling
- Changed the results count display in index.html to use a new container for better structure.
- Added a new CSS class `.results-count-text` in styles.css to define width and height for the results count display, enhancing layout consistency.

--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@
         </div>
       </div>
       <div class="results-count">
-        <div>Results: <span id="communication-count">0</span> Communications</div>
+        <div class="results-count-text">
+          Results: <span id="communication-count">0</span> Communications
+        </div>
         <div class="filtered-tags" id="filtered-tags"></div>
       </div>
 
